--- a/static/template/index.html
+++ b/static/template/index.html
@@ -4,6 +4,8 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>De Laundry</title>
+ <!-- style link -->
+ <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <!-- Navigation bar start -->
@@ -22,7 +24,7 @@
    <!-- Navigation bar end -->
 
    <!-- js link -->
-   <script src="../static/js/script.js"></script>
+   <script src="./js/script.js"></script>
 
 </body>
 </html>
