--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -3,13 +3,30 @@
 
 
 // global settings
-* {
+*{
  margin: 0;
  padding: 0;
  font-family: "Poppins", sans-serif;
+ box-sizing: border-box;
+ scroll-behavior: smooth;
+ outline: none;
+ list-style: none;
+ text-decoration: none;
 }
  
 // variables
+$bg-black-100: rgb(31,31,31,0.9);
+$bg-white-100: #ddd;
+$bg-white-50: #eff0f4;
+$bg-white-25: #f5f5f5;
+$bg-white-10: #f5f5f5;
+$text-black-900: #000;
+$text-black-700: rgb(37,37,37);
+$text-black-600: rgb(172, 172,172);
+$text-black-400: rgb(221,221,221);
+$text-black-300: #f5f5f5;
+$shadow:0 5px 20px rgba(0,0,0,0.5);
+
 
 // base
 
