--- a/static/template/index.html
+++ b/static/template/index.html
@@ -10,7 +10,7 @@
 <body>
   <!-- Navigation bar start -->
     <header>
-     <a href="#" class="logo"> Laundry</a>
+     <a href="#" class="logo">De Laundry</a>
      <ul class="nav">
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
