--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -3,8 +3,8 @@
 
 
 // global settings
-*{
- margin: 0;
+{
+ margin:0;
  padding: 0;
  font-family: "Poppins", sans-serif;
  box-sizing: border-box;
@@ -58,11 +58,47 @@ img{
   font-size: 1.5em;
  }
 }
+.title{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
 
 
 // button Style
 
 // navigation bar
+header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 40px 100px;
+  z-index: 100000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: .5s;
+  .logo{
+    color: $bg-black-700;
+    font-weight: 700;
+    font-size: 2em;
+    text-decoration: none;
+  }
+  .nav{
+    position: relative;
+    display: flex;
+    li{
+      margin: 0 0 0 30PX;
+       a{
+        color: $bg-black-600;
+        font-weight: 300;
+       }
+    }
+  }
+}
 
 // landing page
 
@@ -83,3 +119,6 @@ img{
 // for laptop
 
 // for tablet
+// 
+// 
+// 
