--- a/static/template/index.html
+++ b/static/template/index.html
@@ -5,7 +5,8 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>De Laundry</title>
  <!-- style link -->
- <link rel="stylesheet" href="../css/style.css">
+ <link rel="stylesheet" href="../css/style.scss">
+ <link r>
 </head>
 <body>
   <!-- Navigation bar start -->
