--- a/static/template/index.html
+++ b/static/template/index.html
@@ -6,7 +6,9 @@
  <title>De Laundry</title>
  <!-- style link -->
  <link rel="stylesheet" href="../css/style.scss">
- <link r>
+ <link rel="stylesheet" href="../css/style.css.map">
+ <link rel="stylesheet" href="../css/style.scss">
+
 </head>
 <body>
   <!-- Navigation bar start -->
